--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -64,7 +64,7 @@
 
 @media (max-width: 816px) {
     .social-media-container {
-        gap: 32px;
+        gap: 24px;
     }
 }
 
